# ELE4205_Projet2021

./: .gitignore  .project  CMakeLists.txt  Doxyfile  README.md
Livrable/: .project  CMakeLists.txt
Livrable/src/: boneCVtiming.cpp  capture.cpp  main.cpp
build_parser/: .gitignore  CMakeLists.txt
client/: .project  CMakeLists.txt
client/backup/: client.cpp  common.cpp
client/include/: cameraCapture.h  common.h
client/src/: client.cpp  common.cpp
debug_client/: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile  client  cmake_install.cmake
debug_oc2/: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile  capture  cmake_install.cmake
include/: PWMSongParser.h  cameraCapture.h  common.h  handleClient.h  handleTCP.h
livrable/: .gitignore  .project  CMakeLists.txt  Doxyfile
livrable/backup/: main.cpp
livrable/doc/html/: annotated.html  cameraCapture_8cpp.html  cameraCapture_8h.html  cameraCapture_8h_source.html  classcamera-members.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main_8cpp.html  structcamera-members.html  structcamera.html
livrable/include/: cameraCapture.h  common.h
livrable/src/: boneCVtiming.cpp  cameraCapture.cpp  capture.cpp  common.cpp  main.cpp
src/: PWMSongParser.cpp  cameraCapture.cpp  client.cpp  common.cpp  handleClient.cpp  handleTCP.cpp  main.cpp  mainParser.cpp
(+27 files in other folders)
